notification関連をDRYに基づきリファクタリング

--- a/app/views/notifications/_chat.html.erb
+++ b/app/views/notifications/_chat.html.erb
@@ -1,4 +1,4 @@
-<%= link_to chat_path(notification.visitor.userid), class: "text-decoration-none" do %>
+<%= link_to chat_path(value.visitor.userid), class: "text-decoration-none" do %>
   <span><%= "新規チャット" %></span>
 <% end %>
 <span>が届いています</span>
