--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -17,7 +17,7 @@
 <%= render "chats/file_modal" %>
 <%= render "chats/nav", user: @user %>
 
-
+<%= render "layouts/pagenate", pagenate: @chat_page %>
 <div class="container" id="body">
   <div id="chat" style="margin:1% 1% 70px 1%">
     <div id="messages">
