--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -16,10 +16,10 @@
 <%= render "chats/menu_modal" %>
 <%= render "chats/file_modal" %>
 <%= render "chats/nav", user: @user %>
-<% if @message.size > 50 %>
-<div class="container" style="text-align: center">
-<button type="button"  class="btn btn-link">もっと見る</button>
-</div>
+<% if @message.size > 5 %>
+  <div class="container" style="text-align: center">
+  <button type="button"  class="morebtn btn btn-link">もっと見る</button>
+  </div>
 <% end %>
 <div class="container" id="body">
   <div id="chat" style="margin:1% 1% 70px 1%">
