--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -4,19 +4,18 @@
         display: none;
     }
 </style>
-
 <script>
-    window.addEventListener('load', function bottom_scroll() {
-        var elm = document.documentElement;
-        var bottom = elm.scrollHeight - elm.clientHeight;
-        window.scroll(0, bottom);
-    });
+        window.addEventListener('load', function bottom_scroll() {
+            var elm = document.documentElement;
+            var bottom = elm.scrollHeight - elm.clientHeight;
+            window.scroll(0, bottom);
+        });
 </script>
-
+<input id="messagesJson" type="hidden" data-messages="<%= @message.to_json %>">
 <%= render "chats/menu_modal" %>
 <%= render "chats/file_modal" %>
 <%= render "chats/nav", user: @user %>
-<% if @message.size > 5 %>
+<% if @message.size > 0 %>
   <div class="container" style="text-align: center">
   <button type="button"  class="morebtn btn btn-link">もっと見る</button>
   </div>
@@ -25,7 +24,7 @@
   <div id="chat" style="margin:1% 1% 70px 1%">
     <div id="messages">
       <% date_time = nil %>
-      <% @message.each do |m| %>
+      <% @message.limit(5).offset((@message.size).to_i - 5).each do |m| %>
         <% date_time = m.created_at if date_time == nil %>
         <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
           <div class="date"><%= m.created_at.strftime("%m月%d日") %></div>
