--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -29,7 +29,7 @@
       <% @message.limit(5).offset((@message.size).to_i - 5).each do |m| %>
         <% date_time = m.created_at if date_time == nil %>
         <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
-          <div class="date"><%= m.created_at.strftime("%m月%d日") %></div>
+          <div id="<%= m.created_at.strftime("%Y-%m-%d") %>" class="date"><%= m.created_at.strftime("%Y-%m-%d") %></div>
         <% end %>
         <%= render 'chats/chat_message', message: m, user: m.user_id === current_user.id %>
         <% date_time = m.created_at %>
