--- a/app/views/communities/_user.html.erb
+++ b/app/views/communities/_user.html.erb
@@ -1,7 +1,7 @@
 <div class="user_list">
-  <%= link_to profile_path(user.user.userid), style: "text-decoration: none;" do %>
-    <div class="my-3 p-2 bg-white rounded shadow-sm">
-      <div class="d-flex justify-content-between">
+  <div class="my-3 p-2 bg-white rounded shadow-sm">
+    <div class="d-flex justify-content-between">
+      <%= link_to profile_path(user.user.userid), style: "text-decoration: none;" do %>
         <div class="d-flex text-muted pt-3">
           <%= image_tag user.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
           <p class="pb-3 mb-0 small lh-sm  w-100">
@@ -9,27 +9,48 @@
             @<%= user.user.userid %>
           </p>
         </div>
-        <% if community.user == fixed_current_user && user.user != fixed_current_user %>
-          <div style="padding-top: 19px">
-            <span class="text-dark" style="margin-right:10px">管理用</span>
-            <% if page == 'member' %>
-              <%= link_to community_change_path(id: user.user.id), method: :put, style: "text-decoration: none;color:red;margin-right:10px", data: { confirm: "#{user.user.name}にリーダーを譲渡します。本当によろしいですか？" } do %>
-                <i class="fas fa-people-arrows"></i>
-              <% end %>
-              <%= link_to community_kick_path(id: user.user.id), method: :delete, style: "text-decoration: none;color:red;margin-right:10px", data: { confirm: "#{user.user.name}を強制退出させます。本当によろしいですか？" } do %>
-                <i class="fas fa-user-minus"></i>
-              <% end %>
-              <%= link_to community_communities_security_index_path(id: user.user.id, community_id: community.id), method: :post, style: "text-decoration: none;color:red", data: { confirm: "#{user.user.name}を参加禁止にします。本当によろしいですか？" } do %>
-                <i class="fas fa-user-alt-slash"></i>
-              <% end %>
-            <% else %>
-              <%= link_to community_communities_security_path(id: user.user.id), method: :delete, style: "text-decoration: none;color:green", data: { confirm: "#{user.user.name}を参加可能にします。本当によろしいですか？" } do %>
-                <i class="fas fa-user-check"></i>
-              <% end %>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
+      <% end %>
+      <% if community.user == fixed_current_user && user.user != fixed_current_user %>
+        <div style="padding-top: 19px">
+          <span class="text-dark" style="margin-right:10px">管理用</span>
+          <% if page == 'member' %>
+            <button type="button" style="border: none; background-color: white; color:red" data-bs-toggle="modal" data-bs-target="#Modal1<%= user.user.id %>">
+              <i class="fas fa-people-arrows"></i>
+            </button>
+            <button type="button" style="border: none; background-color: white; color:red" data-bs-toggle="modal" data-bs-target="#Modal2<%= user.user.id %>">
+              <i class="fas fa-user-minus"></i>
+            </button>
+            <button type="button" style="border: none; background-color: white; color:red" data-bs-toggle="modal" data-bs-target="#Modal3<%= user.user.id %>">
+              <i class="fas fa-user-alt-slash"></i>
+            </button>
+          <% else %>
+            <button type="button" style="border: none; background-color: white; color:#007bff" data-bs-toggle="modal" data-bs-target="#Modal4<%= user.user.id %>">
+              <i class="fas fa-user-check"></i>
+            </button>
+          <% end %>
+        </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 </div>
+
+<%= render 'layouts/modal', id: "Modal1#{user.user.id}",
+           title: "確認", content: "#{user.user.name}にリーダーを譲渡します。本当によろしいですか？",
+           negative: "いいえ",
+           affirmmative_path: community_change_path(id: user.user.id), affirmmative_method: :put, affirmative: "はい" %>
+
+<%= render 'layouts/modal', id: "Modal2#{user.user.id}",
+           title: "確認", content: "#{user.user.name}を強制退出させます。本当によろしいですか？",
+           negative: "いいえ",
+           affirmmative_path: community_kick_path(id: user.user.id), affirmmative_method: :delete, affirmative: "はい" %>
+
+<%= render 'layouts/modal', id: "Modal3#{user.user.id}",
+           title: "確認", content: "#{user.user.name}を参加禁止にします。本当によろしいですか？",
+           negative: "いいえ",
+           affirmmative_path: community_communities_security_index_path(id: user.user.id, community_id: community.id),
+           affirmmative_method: :post, affirmative: "はい" %>
+
+<%= render 'layouts/modal', id: "Modal4#{user.user.id}",
+           title: "確認", content: "#{user.user.name}を参加可能にします。本当によろしいですか？",
+           negative: "いいえ",
+           affirmmative_path: community_communities_security_path(id: user.user.id), affirmmative_method: :delete, affirmative: "はい" %>
