--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -1,4 +1,8 @@
-<%# 必要な引数 id: モーダルのID, title: タイトル, content: コンテンツ,  negative: いいえの文字, affirmmative_path: はいのパス, affirmmative_method: はいのメソッド, affirmative: はいの文字 %>
+<%# 必要な引数
+id: モーダルのID,
+title: タイトル,content: コンテンツ,
+negative: いいえの文字,
+affirmmative_path: はいのパス, affirmmative_method: はいのメソッド, affirmative: はいの文字 %>
 <div class="modal fade" id="<%= id %>" tabindex="-1" aria-labelledby="<%= id %>Label" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
