--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,6 +8,20 @@
         border: none;
     }
 </style>
+
+<% if current_user != @user && blocked?(current_user, @user) %>
+  <%= render "layouts/modal", id: "Modal",
+             title: "ブロック", content: "ユーザーのブロックを解除しますか？",
+             negative: "いいえ",
+             affirmmative_path: profile_block_path(@user.id), affirmmative_method: :delete, affirmative: "はい" %>
+<% else %>
+  <%= render "layouts/modal", id: "Modal",
+             title: "ブロック", content: "ユーザーをブロックしますか？",
+             negative: "いいえ",
+             affirmmative_path: profile_block_index_path(@user.id), affirmmative_method: :post, affirmative: "はい" %>
+<% end %>
+
+
 <div class="main container">
   <% if @user.discarded? %>
     <h2 class="text-center">退会済みユーザーです。</h2>
@@ -21,13 +35,13 @@
               <div style="margin-right: 10px">
                 <% unless current_user == @user %>
                   <% if blocked?(current_user, @user) %>
-                    <%= button_to profile_block_path(@user.id), method: :delete, class: "send", data: { disable_with: '<i class="fas fa-ban" style="color: red;width: 20px;height: 20px"></i>' } do %>
+                    <button type="button" class="send" data-bs-toggle="modal" data-bs-target="#Modal">
                       <i class="fas fa-ban" style="color: blue;width: 20px;height: 20px"></i>
-                    <% end %>
+                    </button>
                   <% else %>
-                    <%= button_to profile_block_index_path(@user.id), method: :post, class: "send", data: { disable_with: '<i class="fas fa-ban" style="color: blue;width: 20px;height: 20px"></i>' } do %>
+                    <button type="button" class="send" data-bs-toggle="modal" data-bs-target="#Modal">
                       <i class="fas fa-ban" style="color: red;width: 20px;height: 20px"></i>
-                    <% end %>
+                    </button>
                   <% end %>
                 <% end %>
               </div>
