ルームを追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
               <%= link_to notifications_path, class: "icons nav-link" do %>
                 <i class="fas fa-bell"></i>通知
                 <span class="notice badge bg-light text-dark rounded-pill align-text-bottom">
-                  <%= current_user.passive_notifications.where(checked: false).size %>
+                  <%= current_user.passive_notifications.where(checked: false).size + current_user.whispers.where(checked: false).size %>
                 </span>
               <% end %>
             </li>
