--- a/app/views/communities_room/show.html.erb
+++ b/app/views/communities_room/show.html.erb
@@ -1,2 +1,4 @@
-<h1>CommunitiesRoom#show</h1>
-<p>Find me in app/views/communities_room/show.html.erb</p>
+<h1>わっさー</h1>
+<div id='messages'>
+  <%= render @messages %>
+</div>
