コードを最適化

--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -13,28 +13,28 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <%= image_tag("tutorial1.png", class: "d-block w-100") %>
+          <%= image_tag("tutorial1.png", class: "d-block w-100",'data-lity' => 'data-lity') %>
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
             <h5 style="color: #000">Step1</h5>
             <p style="color: #000">マイページの編集からタグを追加しましょう！タグは自分の趣味や興味のあることを入力しましょう！</p>
           </div>
         </div>
         <div class="carousel-item">
-          <%= image_tag("tutorial2.png", class: "d-block w-100") %>
+          <%= image_tag("tutorial2.png", class: "d-block w-100",'data-lity' => 'data-lity') %>
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
             <h5 style="color: #000">Step2</h5>
             <p style="color: #000">あなたの趣味やに一致するおすすめユーザーをフォローしましょう！</p>
           </div>
         </div>
         <div class="carousel-item">
-          <%= image_tag("tutorial3.png", class: "d-block w-100") %>
+          <%= image_tag("tutorial3.png", class: "d-block w-100",'data-lity' => 'data-lity') %>
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
             <h5 style="color: #000">Step3</h5>
             <p style="color: #000">タイムラインを投稿してみんなとその日の出来事を共有しましょう！</p>
           </div>
         </div>
         <div class="carousel-item">
-          <%= image_tag("tutorial4.png", class: "d-block w-100") %>
+          <%= image_tag("tutorial4.png", class: "d-block w-100",'data-lity' => 'data-lity') %>
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(255,255,255,.6)">
             <h5 style="color: #000">Step4</h5>
             <p style="color: #000">コミュニティに参加して自分のことを知ってもらいましょう！</p>
@@ -61,19 +61,19 @@
     <hr/>
     <h5 style="color: #000">Step1</h5>
     <p style="color: #000">マイページの編集からタグを追加しましょう！タグは自分の趣味や興味のあることを入力しましょう！</p>
-    <%= image_tag("tutorial1.png", class: "w-100") %>
+    <%= image_tag("tutorial1.png", class: "w-100",'data-lity' => 'data-lity') %>
     <hr/>
     <h5 style="color: #000">Step2</h5>
     <p style="color: #000">あなたの趣味やに一致するおすすめユーザーをフォローしましょう！</p>
-    <%= image_tag("tutorial2.png", class: "w-100") %>
+    <%= image_tag("tutorial2.png", class: "w-100",'data-lity' => 'data-lity') %>
     <hr/>
     <h5 style="color: #000">Step3</h5>
     <p style="color: #000">タイムラインを投稿してみんなとその日の出来事を共有しましょう！</p>
-    <%= image_tag("tutorial3.png", class: "w-100") %>
+    <%= image_tag("tutorial3.png", class: "w-100",'data-lity' => 'data-lity') %>
     <hr/>
     <h5 style="color: #000">Step4</h5>
     <p style="color: #000">コミュニティに参加して自分のことを知ってもらいましょう！</p>
-    <%= image_tag("tutorial4.png", class: "w-100") %>
+    <%= image_tag("tutorial4.png", class: "w-100",'data-lity' => 'data-lity') %>
     <hr/>
     <div class="text-center mt-4">
       <div><%= link_to "さあ！Amicaを使ってみましょう！", pages_path, class: "btn btn-primary w-100" %></div>
