--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -22,16 +22,13 @@
     <div class="col-md-6">
       <div class="my-3 p-3 bg-white rounded shadow-sm">
         <h6 class="border-bottom pb-2 mb-0">おすすめユーザー</h6>
-        <% count = 0 %>
-        <% @users.each do |user| %>
-          <% if user.userid? %>
-            <% unless current_user.id == user.id || following?(@following, user) %>
-              <%= render "profiles/user", user: user %>
-              <% count += 1 %>
-              <% break if count > 4 %>
-            <% end %>
-          <% end %>
+        <% count = nil %>
+        <% @users.each_with_index  do |user,i| %>
+          <%= render "profiles/user", user: user %>
+          <% count = i %>
+          <% break if count > 4 %>
         <% end %>
+        <%= "現在はいないようです！" if count.nil? %>
         <small class="d-block text-end mt-3">
           <%= link_to "すべて表示", pickup_profiles_path %>
         </small>
