改善点は多くあるが一旦動くのでコミット

--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -87,6 +87,12 @@ footer{
   resize: none;
 }
 
+#community_content{
+  height: 38px;
+  line-height: 20px;
+  resize: none;
+}
+
 .chat_heading{
   margin-left: 3%;
   position: relative;
