--- a/app/views/communities_room/_form.html.erb
+++ b/app/views/communities_room/_form.html.erb
@@ -2,20 +2,20 @@
   <div class="col-sm-12 messageBox-inner">
     <span class="clear"></span>
     <div class="row">
-        <div class="w-100 d-flex">
-          <label>
-            <button id="file_button" style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#fileModal"></button>
-            <span class="m-1" style="font-size: 1.4rem;color: #f0c065"><i class="fas fa-upload"></i></span>
-          </label>
-          <%= text_area_tag :content, nil, class: "form-control", placeholder: "message", data: { behavior: "communities_room_speaker" }, id: "content" %>
-          <label>
-            <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
-            <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
-          </label>
-          <label>
-            <button style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#menuModal"></button>
-            <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"> <i class="fas fa-th-large"></i></span>
-          </label>
+      <div class="w-100 d-flex">
+        <label>
+          <button id="file_button" style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#fileModal"></button>
+          <span class="m-1" style="font-size: 1.4rem;color: #f0c065"><i class="fas fa-upload"></i></span>
+        </label>
+        <%= text_area_tag :content, nil, class: "form-control", placeholder: "message", data: { behavior: "communities_room_speaker" }, id: "community_content" %>
+        <label>
+          <button id="community_submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
+          <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
+        </label>
+        <label>
+          <button style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#menuModal"></button>
+          <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"> <i class="fas fa-th-large"></i></span>
+        </label>
       </div>
     </div>
   </div>
