--- a/app/views/communities_room/_message.html.erb
+++ b/app/views/communities_room/_message.html.erb
@@ -1,4 +1,5 @@
 <div class="row message-body">
+  <% user = current_user == message.user %>
   <div class="col-sm-12 <%= html_main_class(user) %>" style=" position:relative;">
     <% unless user %>
       <%= link_to profile_path(message.user.userid), class: "userLink" do %>
