--- a/app/views/communities_room/show.html.erb
+++ b/app/views/communities_room/show.html.erb
@@ -24,9 +24,9 @@
 <% end %>
 <div class="container" id="body">
   <div id="chat" style="margin:1% 1% 70px 1%">
-    <div id="messages"
+    <div id="community_messages"
          data-user="<%= current_user.to_json(only: [:id, :userid]) %>"
-         data-user-image="<%= current_user.image.attached? ? url_for(current_user.user.image) : "/assets/default_icon.png" %>"
+         data-user-image="<%= current_user.image.attached? ? url_for(current_user.image) : "/assets/default_icon.png" %>"
          data-community="<%= @community.id %>">
       <% date_time = nil %>
       <% @messages.limit(50).offset((@messages.size).to_i - 50).each do |m| %>
