--- a/app/views/communities_room/_file_modal.html.erb
+++ b/app/views/communities_room/_file_modal.html.erb
@@ -6,13 +6,13 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <input type="hidden" id="type" value="file">
-        <input type="file" id="file_uploader" data-behavior="chat_file">
+        <input type="file" id="file_uploader">
+
       </div>
-      <img id="preview" src="" style="text-align: center; display: none;">
+      <img id="preview" src="" style="text-align: center; display: none;" alt="preview">
       <div class="modal-footer">
-        <label><!-- Button trigger modal -->
-          <button id="file_submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
+        <label>
+          <button id="community_file_submit_button" style="display: none" type="submit" class="btn btn-primary form-control"></button>
           <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
         </label>
       </div>
