--- a/app/views/communities_room/show.html.erb
+++ b/app/views/communities_room/show.html.erb
@@ -12,10 +12,10 @@
         window.scroll(0, bottom);
     });
 </script>
-<input id="messagesJson" type="hidden" data-messages="<%= @messages.select(:content, :image, :file_name, :created_at, :url).to_json %>">
+<input id="messagesJson" type="hidden" data-messages="<%= @json %>">
 
 <%= render "chats/menu_modal" %>
-<%= render "chats/file_modal" %>
+<%= render "communities_room/file_modal" %>
 <%= render "communities_room/nav", community: @community %>
 <% if @messages.size > 50 %>
   <div class="container" style="text-align: center">
@@ -25,8 +25,7 @@
 <div class="container" id="body">
   <div id="chat" style="margin:1% 1% 70px 1%">
     <div id="community_messages"
-         data-user="<%= current_user.to_json(only: [:id, :userid]) %>"
-         data-user-image="<%= current_user.image.attached? ? url_for(current_user.image) : "/assets/default_icon.png" %>"
+         data-user="<%= current_user.id %>"
          data-community="<%= @community.id %>">
       <% date_time = nil %>
       <% @messages.limit(50).offset((@messages.size).to_i - 50).each do |m| %>
