名前を表示

--- a/app/views/communities_room/_message.html.erb
+++ b/app/views/communities_room/_message.html.erb
@@ -5,7 +5,13 @@
         <%= image_tag message.user.image.attached? ? url_for(message.user.image) : '/assets/default_icon.png', class: "icon bd-placeholder-img flex-shrink-0 me-2 mt-2 ", style: "float: left;", width: "40px", height: "40px" %>
       <% end %>
     <% end %>
-    <div class="<%= html_sub_class(user) %> my-1 p-1 mt-2" style="max-width: 40%;">
+
+    <% unless user %>
+      <div class="text-gray small">
+        <%= message.user.name %>
+      </div>
+    <% end %>
+    <div class="<%= html_sub_class(user) %> my-1 p-1" style="max-width: 40%;">
       <div class="messages container p-1">
         <%= chat_content(message) %>
       </div>
