--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -56,7 +56,7 @@
               </div>
               <div class="canvas_wrapper">
                 <canvas id="source_canvas" width="1" height="1"></canvas>
-              </div>=
+              </div>
               <div class="modal-footer">
                 <button type="button" id="close_button" class="btn btn-primary" data-bs-dismiss="modal">画像を切り取る</button>
               </div>
