--- a/app/views/comments/_hide_comments.html.erb
+++ b/app/views/comments/_hide_comments.html.erb
@@ -42,7 +42,7 @@
       <%= image_tag comment.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
     <% end %>
     <p class="pb-3 mb-0 lh-sm w-100">
-      <strong class="text-dark" style="font-size:20px;margin: 0"><%= comment.user.name %></strong>
+      <strong class="text-dark" style="font-size:20px;margin: 0"><%= comment.user.nickname %></strong>
       <span class="text-gray small" style="margin: 0">@<%= comment.user.userid %></span>
       <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(comment.created_at) %></span>
       <br/>
