--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -72,7 +72,7 @@
           <%= image_tag post.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
         <% end %>
         <p class="pb-3 mb-0 lh-sm w-100">
-          <strong class="text-dark" style="font-size:20px;margin: 0"><%= post.user.decorate.name %></strong>
+          <strong class="text-dark" style="font-size:20px;margin: 0"><%= post.user.decorate.nickname %></strong>
           <span class="text-gray small" style="margin: 0">@<%= post.user.userid %></span>
           <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post.created_at) %></span>
           <br/>
