--- a/app/views/timelines/_report_modal.erb
+++ b/app/views/timelines/_report_modal.erb
@@ -1,4 +1,4 @@
-<div id="post_<%= post.id %>">
+<div id="report_<%= post.id %>">
   <div class="modal fade" id="exampleModal<%= post.id %>" tabindex="-1" aria-labelledby="exampleModalLabel<%= post.id %>" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
