--- a/app/assets/stylesheets/community_index.scss
+++ b/app/assets/stylesheets/community_index.scss
@@ -154,3 +154,14 @@
   top: 0;
   transform: none;
 }
+
+.fa-star{
+  position: absolute;
+  top :3%; right: 3%;
+}
+
+.fa-bullhorn{
+  position: absolute;
+  top :6%; right: 3.2%;
+  font-size: 1.6rem;
+}
