--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -15,7 +15,9 @@
       <%= link_to "チャット", community_chat_path(@community.id), class: "btn btn-outline-dark mx-2" %>
       <%= link_to "編集", edit_community_path, class: "btn btn-outline-dark mx-2" %>
       <% if is_community_favorite?(@favorite, @user, @community) %>
-        <%= link_to "お気に入り解除", page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'btn btn-outline-dark mx-2 bg-dark text-light', style: "", data: { disable_with: 'お気に入り解除' } %>
+        <%= link_to page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'mx-2', style: "", data: { disable_with: 'お気に入り解除' } do %>
+          <i class="fas fa-star fa-2x"></i>
+        <% end %>
       <% else %>
         <%= link_to page_favorite_community_create_path(@community.id), method: :post, class: 'mx-2', style: "", data: { disable_with: 'お気に入り登録' } do %>
           <i class="far fa-star fa-2x"></i>
@@ -28,9 +30,13 @@
           脱退
         </button>
         <% if is_community_favorite?(@favorite, @user, @community) %>
-          <%= link_to "お気に入り解除", page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'btn btn-outline-dark mx-2 bg-dark text-light', style: "", data: { disable_with: 'お気に入り解除' } %>
+          <%= link_to page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'mx-2 ', style: "", data: { disable_with: 'お気に入り解除' } do%>
+            <i class="fas fa-star fa-2x"></i>
+          <%end%>
         <% else %>
-          <%= link_to "お気に入り登録", page_favorite_community_create_path(@community.id), method: :post, class: 'btn btn-outline-dark mx-2', style: "", data: { disable_with: 'お気に入り登録' } %>
+          <%= link_to page_favorite_community_create_path(@community.id), method: :post, class: 'mx-2', style: "", data: { disable_with: 'お気に入り登録' } do%>
+            <i class="far fa-star fa-2x"></i>
+          <%end%>
         <% end %>
         <div class="ms-2">
           <label>
