--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -14,6 +14,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
   <meta name=”description” content=”ISC学生向けの友達作りサイトです。” />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FEWKYWJMZD"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FEWKYWJMZD');
+  </script>
 </head>
 
   <body class="d-flex h-100 text-center text-dark">
