本番環境実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html lang="ja">
 <head>
   <title>Amica</title>
+  <meta name="viewport" content="width=320,height=480,initial-scale=1.0,minimum-scale=1.0, maximum-scale=2.0,user-scalable=yes"/>
+
   <%= favicon_link_tag('amica.ico') %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
@@ -13,7 +15,6 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
   <meta name=”description” content=”ISC学生向けの友達作りサイトです。” />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FEWKYWJMZD"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
