--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html lang="ja">
 <head>
   <title>Amica</title>
+  <meta name="viewport" content="width=320,height=480,initial-scale=1.0,minimum-scale=1.0, maximum-scale=2.0,user-scalable=yes"/>
+
   <%= favicon_link_tag('amica.ico') %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
