--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -5,6 +5,9 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <title>Amica</title>
+
+  <meta name="viewport" content="width=320,height=480,initial-scale=1.0,minimum-scale=1.0, maximum-scale=2.0,user-scalable=yes"/>
+
   <%= favicon_link_tag('amica.ico') %>
   <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
 
