--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
 <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"/>
 <%= javascript_pack_tag 'home/index' %>
 
 
@@ -30,24 +30,25 @@
  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'
 -->
 
-<%= image_tag("top_icon.png",class: "icon title-image",style: "margin-bottom: 30px;display:none")%>
-<div class="title-text" style="margin-bottom: 30px;opacity:0">
-  <p>Amicaはあなたの生活に<u>新たな出会いをプラス</u>する</p>
-  <p><u>コミュニケーションツール</u>です</p>
+<div class="container">
+  <%= image_tag("top_icon.png", class: "icon title-image", style: "margin-bottom: 30px;display:none") %>
+  <div class="title-text" style="margin-bottom: 30px;opacity:0">
+    <p>Amicaはあなたの生活に<u>新たな出会いをプラス</u>する</p>
+    <p><u>コミュニケーションツール</u>です</p>
+  </div>
+
+  <p class="lead buttons" style="opacity:0">
+    <%= link_to "新規登録",
+                new_user_registration_path,
+                class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
+                style: "margin-right: 10px; width: 150px;color:#FFF"
+    %>
+    <%= link_to "ログイン",
+                new_user_session_path,
+                class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
+                style: "width: 150px;color:#FFF"
+    %>
+  </p>
 </div>
-
-<p class="lead buttons" style="opacity:0">
-  <%= link_to "新規登録",
-              new_user_registration_path,
-              class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
-              style: "margin-right: 10px; width: 150px;color:#FFF"
-  %>
-  <%= link_to "ログイン",
-              new_user_session_path,
-              class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
-              style: "width: 150px;color:#FFF"
-  %>
-</p>
-
 
 
