homeのレイアウトを修正

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,19 +1,20 @@
-<div class="text" style="font-size: 18px">
-  <section>
-    <h2>このアプリについて</h2>
-    <div class="medium">
-      <p>本アプリは<u>岩崎学園情報科学専門学校生に向けたアプリ</u>です。</p>
-      <p>タグや呟きを元に検索を行い趣味の合う人を探してチャットを行ったり、</p>
-      <p>実際に学校で話しかける<u>きっかけを探す手助け</u>をします。</p>
-      <p>学生生活を新たな友人と共に。</p>
-    </div>
-  </section>
+<div class="container">
+  <div class="text" style="font-size: 18px">
+    <section>
+      <h2>このアプリについて</h2>
+      <div class="medium">
+        <p>本アプリは<u>岩崎学園情報科学専門学校生に向けたアプリ</u>です。</p>
+        <p>タグや呟きを元に検索を行い趣味の合う人を探してチャットを行ったり、</p>
+        <p>実際に学校で話しかける<u>きっかけを探す手助け</u>をします。</p>
+        <p>学生生活を新たな友人と共に。</p>
+      </div>
+    </section>
 
-  <br />
+    <br/>
 
-  <section>
-    <h2>クレジット</h2>
-    <div class="medium">
+    <section>
+      <h2>クレジット</h2>
+      <div class="medium">
         <h3>Avails 2T1 グループ１</h3>
         <div class="members">
           <span class="usui">05 薄井大樹</span>
@@ -24,5 +25,6 @@
           <span class="tomosugi">38 友杉颯太</span>
         </div>
       </div>
-  </section>
+    </section>
+  </div>
 </div>
