homeのレイアウトを修正

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -59,3 +59,19 @@ body {
 }
 
 .bg-blue { background-color: #00A1AE; }
+
+.bg_pattern {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  opacity: 0.4;
+  z-index: -1;
+}
+
+.Polka {
+  background-image: radial-gradient(rgba(29,144,190,0.3) 2px, #ffffff 2px);
+  background-size: 20px 20px;
+}
