--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,30 +1,30 @@
+<style>
+    body {
+        background: none;
+        background-repeat: no-repeat;
+        box-shadow: none;
+    }
+</style>
+
+<div class="bg_pattern Polka"></div>
+
 <div class="container">
-  <div class="text" style="font-size: 18px">
-    <section>
-      <h2>このアプリについて</h2>
-      <div class="medium">
-        <p>本アプリは<u>岩崎学園情報科学専門学校生に向けたアプリ</u>です。</p>
-        <p>タグや呟きを元に検索を行い趣味の合う人を探してチャットを行ったり、</p>
-        <p>実際に学校で話しかける<u>きっかけを探す手助け</u>をします。</p>
-        <p>学生生活を新たな友人と共に。</p>
-      </div>
-    </section>
+  <div class="mb-5">
+    <h2>このアプリについて</h2>
+    <div>
+      <p>本アプリは<u>岩崎学園情報科学専門学校生に向けたアプリ</u>です。</p>
+      <p>タグや呟きを元に検索を行い趣味の合う人を探してチャットを行ったり、</p>
+      <p>実際に学校で話しかける<u>きっかけを探す手助け</u>をします。</p>
+      <p>学生生活を新たな友人と共に。</p>
+    </div>
+  </div>
 
-    <br/>
-
-    <section>
-      <h2>クレジット</h2>
-      <div class="medium">
-        <h3>Avails 2T1 グループ１</h3>
-        <div class="members">
-          <span class="usui">05 薄井大樹</span>
-          <span class="utsunomiya">06 宇津宮一歩</span>
-          <span class="endo">08 遠藤桂樹</span><br>
-          <span class="kubo"> 17 久保聖人</span>
-          <span class="suyaryu">29 須山龍</span>
-          <span class="tomosugi">38 友杉颯太</span>
-        </div>
-      </div>
-    </section>
+  <div class="mb-5">
+    <h2>ソースコード</h2>
+    <div>
+      <p>本アプリケーションはオープンソースソフトウェアです。</p>
+      <p>ライセンスの規定を守れば、誰でも自由に複製、改変、配布することができます。</p>
+      <%= link_to "github", "https://github.com/AvailsGroup/Amica" %>
+    </div>
   </div>
 </div>
