--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -31,7 +31,7 @@
 -->
 
 <div class="container">
-  <%= image_tag("top_icon.png", class: "icon title-image", style: "margin-bottom: 30px;display:none") %>
+  <%= image_tag("top_icon.png", class: "icon title-image", style: "margin-bottom: 30px;display:none;") %>
   <div class="title-text" style="margin-bottom: 30px;opacity:0">
     <p>Amicaはあなたの生活に<u>新たな出会いをプラス</u>する</p>
     <p><u>コミュニケーションツール</u>です</p>
