homeのレイアウトを修正

--- a/app/views/home/privacy.html.erb
+++ b/app/views/home/privacy.html.erb
@@ -10,6 +10,8 @@
     }
 </style>
 
+<div class="bg_pattern Polka"></div>
+
 <h1>プライバシーポリシー</h1>
 <p>Avails（以下，「当グループ」といいます。）は，本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。</p>
 
