--- a/app/views/home/static.html.erb
+++ b/app/views/home/static.html.erb
@@ -10,6 +10,8 @@
     }
 </style>
 
+<div class="bg_pattern Polka"></div>
+
 <h1>利用規約</h1>
 <p>この利用規約（以下，「本規約」といいます。）は，Avails（以下，「当グループ」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
 
