--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -26,13 +26,24 @@
   <div id="chat" style="margin:1% 1% 70px 1%">
     <div id="messages">
       <% date_time = nil %>
-      <% @message.limit(50).offset((@message.size).to_i - 50).each do |m| %>
-        <% date_time = m.created_at if date_time == nil %>
-        <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
-          <div id="<%= m.created_at.strftime("%Y-%m-%d") %>" class="date"><%= m.created_at.strftime("%Y-%m-%d") %></div>
+      <% if @message.size > 50 %>
+        <% @message.limit(50).offset((@message.size).to_i - 50).each do |m| %>
+          <% date_time = m.created_at if date_time == nil %>
+          <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
+            <div id="<%= m.created_at.strftime("%Y-%m-%d") %>" class="date"><%= m.created_at.strftime("%Y-%m-%d") %></div>
+          <% end %>
+          <%= render 'chats/chat_message', message: m, user: m.user_id === current_user.id %>
+          <% date_time = m.created_at %>
         <% end %>
-        <%= render 'chats/chat_message', message: m, user: m.user_id === current_user.id %>
-        <% date_time = m.created_at %>
+      <% else %>
+        <% @message.each do |m| %>
+          <% date_time = m.created_at if date_time == nil %>
+          <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
+            <div id="<%= m.created_at.strftime("%Y-%m-%d") %>" class="date"><%= m.created_at.strftime("%Y-%m-%d") %></div>
+          <% end %>
+          <%= render 'chats/chat_message', message: m, user: m.user_id === current_user.id %>
+          <% date_time = m.created_at %>
+        <% end %>
       <% end %>
     </div>
   </div>
