--- a/app/views/comments/_report_modal.html.erb
+++ b/app/views/comments/_report_modal.html.erb
@@ -12,7 +12,7 @@
             <div class="d-flex text-muted">
               <%= image_tag comment.post.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
               <p class="pb-3 mb-0 lh-sm w-100">
-                <strong class="text-dark" style="font-size:20px;margin: 0"><%= comment.post.user.nickname %></strong>
+                <strong class="text-dark" style="font-size:20px;margin: 0"><%= comment.user.nickname %></strong>
                 <span class="text-gray small" style="margin: 0">@<%= comment.post.user.userid %></span>
                 <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(comment.created_at) %></span>
                 <br/>
